src/test/resources/Parser/SyntaxErrors/SignatureCollisionGeneric.front
class Q:
    f<A>(a: A, i: int32 = 5) {}
    f(f: float32, i: int32) {}